# pi_wgpu

./: .gitignore  Cargo.toml  DOCUMENT.md  README.md
documents/: design.md
examples/: clear.rs  framework.rs  gui_demo.rs  hello.rs  triangle.rs
examples/compress_texture/: bx_lanseguanbi.s3tc.ktx  image.frag  image.vert  main.rs
examples/hello-triangle/: main.rs
examples/image/: main.rs
examples/shader/: triangle.frag
examples/test/: main.rs
examples/triangle/: main.rs  triangle.vert
examples/webgl_spector/: spector.js  webgl_spector.js
src/: lib.rs
src/hal/: adapter.rs  api.rs  bind_group.rs  buffer.rs  command.rs  device.rs  egl_impl.rs  fence.rs  gl_cache.rs  gl_conv.rs  gl_state.rs  gles.rs  instance.rs  mod.rs  pipeline.rs  query_set.rs  queue.rs  sampler.rs  shader_module.rs  surface.rs  texture.rs
src/pi_wgpu/: mod.rs
src/pi_wgpu/hal/: adapter.rs  api.rs  bind_group.rs  buffer.rs  command.rs  device.rs  egl_impl.rs  gl_cache.rs  gl_conv.rs  gl_state.rs  gles.rs  instance.rs  mod.rs  pipeline.rs  queue.rs  sampler.rs  shader_module.rs  surface.rs  texture.rs
src/pi_wgpu/hal/shaders/: blit.frag  blit.vert
src/pi_wgpu/util/: device.rs  init.rs  mod.rs  mutex.rs
src/pi_wgpu/wgc/: adapter.rs  bind_group.rs  bind_group_layout.rs  buffer.rs  command.rs  device.rs  instance.rs  mod.rs  pipeline_layout.rs  queue.rs  render_pipeline.rs  sampler.rs  shader_module.rs  surface.rs  texture.rs
src/pi_wgpu/wgt/: mod.rs
src/util/: device.rs  init.rs  mod.rs
src/utils/: float_hash.rs  mod.rs
src/wgc/: adapter.rs  bind_group.rs  bind_group_layout.rs  buffer.rs  command.rs  compute_pipeline.rs  device.rs  instance.rs  mod.rs  pipeline_layout.rs  query_set.rs  queue.rs  render_pipeline.rs  sampler.rs  shader_module.rs  surface.rs  texture.rs
src/wgpu_core/: adapter.rs  api.rs  bind_group.rs  bind_group_layout.rs  buffer.rs  command.rs  compute_pipeline.rs  device.rs  fence.rs  instance.rs  mod.rs  pipeline_layout.rs  query_set.rs  queue.rs  render_pipeline.rs  sampler.rs  shader_module.rs  surface.rs  texture.rs
src/wgpu_hal/: api.rs  empty.rs  mod.rs  types.rs
src/wgpu_hal/auxil/: mod.rs
src/wgpu_hal/gl/: adapter.rs  bind_group.rs  bind_group_layout.rs  buffer.rs  command.rs  compute_pipeline.rs  conv.rs  device.rs  fence.rs  instance.rs  mod.rs  pipeline_layout.rs  query_set.rs  queue.rs  render_pipeline.rs  sampler.rs  shader_module.rs  surface.rs  texture.rs
src/wgpu_types/: mod.rs
src/wgt/: mod.rs
