[package]
name = "pi_wgpu"
version = "0.1.0"
authors = ["moyy <myy412001799@gmail.com>"]
edition = "2021"
description = "WebGPU implement by single thread in gl3.3 / gles3.0 / webgl2"
repository = "https://github.com/GaiaWorld/pi_wgpu"
license = "MIT OR Apache-2.0"
keywords = ["pi", "webgpu"]

[features]
default = ["gl"]
gl = ["naga/glsl-out"]

[dependencies]
pi_share = "0.4"

log = "0.4"
futures = "0.3"
arrayvec = "0.7"
bitflags = "2.4"
thiserror = "1.0"
twox-hash = "1.6"
ordered-float = "3.9"
parking_lot = "0.12"
codespan-reporting = "0.11"
raw-window-handle = "0.5"
profiling = { version = "1", default-features = false }
serde = { version = "1", features = ["serde_derive"], optional = true }

# backend: Gles
glow = { version = "0.12" }
wgpu = { version = "0.16", default-features = false, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libloading = { version = "0.8" }
egl = { package = "khronos-egl", version = "4.1", features = ["dynamic"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "profileapi",
    "libloaderapi",
    "windef",
    "winuser",
    "dcomp",
] }

[target.'cfg(all(target_arch = "wasm32", not(target_os = "emscripten")))'.dependencies]
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.61", features = [
    "Window",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "OffscreenCanvas",
] }

[target.'cfg(target_os = "android")'.dependencies]
android_system_properties = "0.1.1"

[dependencies.naga]
version = "0.12"
features = ["clone", "glsl-in", "glsl-out"]

# DEV dependenciesw

[dev-dependencies]
winit = "0.28"
pollster = "0.3"
env_logger = "0.10"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1.0.85"

[dev-dependencies.naga]
version = "0.12"
features = ["clone", "glsl-in", "glsl-out"]
