[package]
name = "pi_wgpu"
version = "0.1.6"
authors = ["moyy <myy412001799@gmail.com>"]
edition = "2021"
description = "WebGPU implement by single thread in GL-3.3 / GLES-3.0 / WebGL2"
repository = "https://github.com/GaiaWorld/pi_wgpu"
license = "MIT OR Apache-2.0"
keywords = ["pi", "webgpu"]

[features]
default = ["gl"]
# default = ["use_wgpu", "gl"]
gl = []
use_wgpu = ["wgpu", "wgpu/glsl"]

[dependencies]
pi_egl = { version = "0.1", registry = "yn"}
pi_share = "0.4"

glow = "0.12"
naga = { version = "0.12", features = ["clone", "glsl-in", "glsl-out"] }

wgpu = { version = "0.16", default-features = false, optional = true }

log = "0.4"
bitflags = "2.4"
thiserror = "1.0"
twox-hash = "1.6"
lazy_static = "1.4"
parking_lot = "0.12"
ordered-float = "3.9"
raw-window-handle = "0.5"
codespan-reporting = "0.11"
profiling = { version = "1", default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"]}

[yn]
# pi_egl = {path = "../pi_egl"}


# DEV dependencies

[dev-dependencies]
log = "0.4"
env_logger = "0.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
glow = {version = "0.12", features = ["debug_trace_calls"]}


winit = "0.28"
pollster = "0.3"
naga = { version = "0.12", features = ["clone", "glsl-in", "glsl-out"] }
bytemuck = { version = "1.4", features = ["derive"] }
glam = "0.24"
