[package]
name = "pi_wgpu"
version = "0.2.5"
authors = ["moyy <myy412001799@gmail.com>"]
edition = "2021"
description = "WebGPU implement by single thread in GL-3.3 / GLES-3.0 / WebGL2"
repository = "https://github.com/GaiaWorld/pi_wgpu"
license = "MIT OR Apache-2.0"
keywords = ["pi", "webgpu"]

[features]
default = ["gl"]
# default = ["use_wgpu", "gl"]
webgl = []
webgpu = []
gl = []
geterror = []
single_thread = []
use_wgpu = ["wgpu", "wgpu/glsl"]

[dependencies]
pi_egl = { version = "0.2", registry = "yn" }
pi_share = "0.5"

glow = { package = "pi_glow", version = "0.13", registry = "yn" }
naga = { version = "0.19", features = ["clone", "glsl-in", "glsl-out"] }

wgpu = { version = "0.19", default-features = false, optional = true }

log = "0.4"
bitflags = "2.4"
thiserror = "1.0"
twox-hash = "1.6"
lazy_static = "1.4"
parking_lot = "0.12"
ordered-float = "3.9"
raw-window-handle = "0.6"
codespan-reporting = "0.11"
profiling = { version = "1", default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }
pi_time = "0.5"
pi_hash = "0.1"
pi_assets = "0.15"
derive-deref-rs = "0.1"
derive_more = {version = "1.0", features=["debug"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = [
	"HtmlCanvasElement",
	"OffscreenCanvas",
	"ImageBitmap",
] }
js-sys = "0.3"

# DEV dependencies

# [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
# my_library = { version = "0.1", features = ["wgpu"] }
# wgpu = { version = "0.16", default-features = false, features = ["glsl", "wgc"] }

[dev-dependencies]
ktx = "0.3"
log = "0.4"
env_logger = "0.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
glow = { package = "pi_glow", version = "0.13", registry = "yn" }
winit = { registry = "yn", version = "0.27" }
pollster = "0.3"
naga = { version = "0.19", features = ["clone", "glsl-in", "glsl-out"] }
bytemuck = { version = "1.4", features = ["derive"] }
glam = "0.24"

# [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
web-sys = { version = "0.3", features = [
	"HtmlCanvasElement",
	"OffscreenCanvas",
	"ImageBitmapRenderingContext",
] }
js-sys = "0.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"

[target.'cfg(target_os = "android")'.example]
name = "triangle"
test = true

[[example]]
name = "image"
test = true

[[example]]
name = "test"
test = true

[[example]]
name = "compress_texture"
test = true

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7"


[patch.yn]
# pi_egl = { path = "../pi_egl" }
# winit = { path = "../winit"}
# glow = { package = "pi_glow", path = "../pi_glow" }